[metadata]
name = pyladies
description-file = README.md
author = Lynn Root
author-email = lynn@pyladies.com
summary = Everything you need to start your own PyLadies location
home-page = https://github.com/pyladies/pyladies-kit
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: CC BY-SA 3.0
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Intended Audience :: Developers
    Environment :: Console

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    pyladies

[entry_points]
console_scripts =
    pyladies = pyladies.main:main

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source