[metadata]
name = pyladies
description-file = README.md
author = Lynn Root
version = 2.0.0
author-email = lynn@pyladies.com
summary = Everything you need to start your own PyLadies location
home-page = https://github.com/pyladies/pyladies-kit
classifier =
    Development Status :: 4 - Beta
    License :: Freely Distributable
    License :: Public Domain
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Intended Audience :: Developers
    Environment :: Console


[files]
packages =
    pyladies

[entry_points]
console_scripts =
    pyladies = pyladies.main:main

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source

[wheel]
universal = 1